--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #1a1a1c;
+  color: #fff;
+}
+
+.App{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 64px;
+}
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -40,4 +58,45 @@ code {
 }
 .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
   border-radius: unset
+}
+
+.ticker-row{
+  display: flex;
+  justify-content: space-evenly;
+  border-bottom: 1px solid white;
+  justify-items: start;
+  height: 80px;
+  width: 900px;
+  align-items: center;
+}
+
+.ticker-input{
+  padding-left: 16px;
+  width: 300px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid white;
+
+}
+
+
+h3{
+  font-size: 16px;
+  width: 150px;
+}
+
+
+.ticker-header{
+  display: flex;
+  justify-content: space-around;
+  margin-right: 20px;
+  font-size: 24px;
+}
+
+.ticker-search {
+  margin-bottom: 64px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
 }
