--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: #1a1a1c;
-  color: #fff;
+  /* background-color: #1a1a1c; */
+  /* color: #fff; */
 }
 
 .App{
