--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,16 @@
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   /* background-color: #1a1a1c; */
-  /* color: #fff; */
+  color: #fff;
+}
+
+html{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #1a1a1c;
+  color: #fff;
 }
 
 .App{
@@ -12,8 +21,8 @@
   flex-direction: column;
   align-items: center;
   margin-top: 64px;
+  background-color: #1a1a1c;
 }
-
 
 
 body {
@@ -30,6 +39,9 @@ code {
     monospace;
 }
 
+#ticker-search{
+  color:black;
+}
 
 .pagination {
   margin: 15px auto;
@@ -60,11 +72,15 @@ code {
   border-radius: unset
 }
 
+h3{
+  font-size: 16px;
+  width: 150px;
+}
+
 .ticker-row{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   border-bottom: 1px solid white;
-  justify-items: start;
   height: 80px;
   width: 900px;
   align-items: center;
@@ -76,21 +92,7 @@ code {
   height: 50px;
   border-radius: 4px;
   border: 1px solid white;
-
-}
-
-
-h3{
-  font-size: 16px;
-  width: 150px;
-}
-
-
-.ticker-header{
-  display: flex;
-  justify-content: space-around;
-  margin-right: 20px;
-  font-size: 24px;
+  color: black;
 }
 
 .ticker-search {
@@ -99,4 +101,11 @@ h3{
   flex-direction: column;
   justify-content: center;
   align-content: center;
+}
+
+th, td{
+  text-align: center;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  border-bottom: 1px solid white;
 }
